Bug 517034 - [Android] Multi-finger gestures (such as pinch zooming and changing the brush size with 3-finger drag) can oftentimes cause unintentionally painted dots
Summary: [Android] Multi-finger gestures (such as pinch zooming and changing the brush...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: 5.3.0-beta2
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2026-03-03 15:15 UTC by Door1
Modified: 2026-03-09 09:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video of unintentionally painted dots while pinch zooming (1.26 MB, video/mp4)
2026-03-03 15:15 UTC, Door1
Details
Video of correct expected behavior, as seen on Drawpile (929.75 KB, video/mp4)
2026-03-03 15:19 UTC, Door1
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Door1 2026-03-03 15:15:34 UTC
Created attachment 190312 [details]
Video of unintentionally painted dots while pinch zooming

SUMMARY
When touch painting, multi-finger gestures (such as pinch zooming and changing the brush size with 3-finger drag) can oftentimes result in unintentionally painted dots while performing the gestures repeatedly.

See attachment for video of the bug.

STEPS TO REPRODUCE (METHOD 1)
1. Settings, Configure Krita, Canvas Input Sertings, Change Primary Setting
2. Create new shortcut: "Gesture, Three Finger Drag, Normal"
3. On the canvas, repeatedly use 3 finger drags to change the brush size.

STEPS TO REPRODUCE (METHOD 2)
When touch painting, use 2 fingers to rapidly pinch zoom in and out of the canvas repeatedly. Keep doing this for about a minute.

OBSERVED RESULT
In many instances, following the above steps results in unintentionally painted dots on the canvas at the end of the gesture. This forces the user to perform an undo to get rid of this dot.

EXPECTED RESULT
There are no unintentionally painted dots at the end of the multi-finger gesture.

Additionally, tap-to-paint functionality resumes AFTER all fingers are lifted from the screen. 

The correct, expected behavior can be observed in Drawpile for Android: pinch zooming there doesn't result in unintentionally painted dots, but the user can continue the desired tap-to-paint after they finish pinch zooming.

SOFTWARE/OS VERSIONS
Android 16
arm64
Latest stable/beta/nightly builds of Krita as of March 2, 2026
Comment 1 Door1 2026-03-03 15:19:37 UTC
Created attachment 190313 [details]
Video of correct expected behavior, as seen on Drawpile
Comment 2 dra.w.p.il.e+bugskde 2026-03-07 04:49:46 UTC
Easier steps to reproduce:

1. Zoom with two fingers.
2. Lift one finger.
3. Move the other finger.

The problem being that Krita is wiling to switch from a non-drawing action to a drawing action within the same touch operation, which it shouldn't be doing until all fingers are lifted.
Comment 3 Bug Janitor Service 2026-03-07 05:13:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2680
Comment 4 Dmitry Kazakov 2026-03-09 09:47:11 UTC
Git commit 0098a4d7f53e6dd90e0e8df6d204e80a93355b88 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 09/03/2026 at 09:47.
Pushed by dkazakov into branch 'master'.

Don't touch paint when multiple fingers were down

Previously, you could put two fingers down to zoom the canvas, then lift
one of them and enter touch painting. This is nonsense behavior and just
lead to random blotches appearing when having touch painting enabled, so
now that gets blocked for the current touch operation if multiple
fingers have ever been down for it.

M  +10   -2    libs/ui/input/kis_input_manager.cpp
M  +1    -0    libs/ui/input/kis_input_manager_p.h

https://invent.kde.org/graphics/krita/-/commit/0098a4d7f53e6dd90e0e8df6d204e80a93355b88
Comment 5 Dmitry Kazakov 2026-03-09 09:47:44 UTC
Git commit 57489c7acfd0564dbbf26bf303a3138b62c9c9dc by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 09/03/2026 at 09:47.
Pushed by dkazakov into branch 'krita/6.0'.

Don't touch paint when multiple fingers were down

Previously, you could put two fingers down to zoom the canvas, then lift
one of them and enter touch painting. This is nonsense behavior and just
lead to random blotches appearing when having touch painting enabled, so
now that gets blocked for the current touch operation if multiple
fingers have ever been down for it.

M  +10   -2    libs/ui/input/kis_input_manager.cpp
M  +1    -0    libs/ui/input/kis_input_manager_p.h

https://invent.kde.org/graphics/krita/-/commit/57489c7acfd0564dbbf26bf303a3138b62c9c9dc