Don't touch paint when multiple fingers were down

Previously, you could put two fingers down to zoom the canvas, then lift
one of them and enter touch painting. This is nonsense behavior and just
lead to random blotches appearing when having touch painting enabled, so
now that gets blocked for the current touch operation if multiple
fingers have ever been down for it.

BUG:517034